web/static/css/_forms.scss
// ------- Forms --------------

label {
  color: $primary-color;
}

.small-text-bellow {
  @extend .grey-text, .lighten-2;
  font-size: 14px;
  margin-top: -18px;
  margin-bottom: 22px;
  display: block;
}

.dropfile {
  @include  transition(border-color ease-in-out .2s);
  @extend .grey-text;
  font-size: 18px;
  width: 100%;
  height: 350px;
  border: 2px dashed color("grey", "lighten-3");
  position: relative;
  cursor: pointer;
  .drop-icon {
    @include  transition(color ease-in-out .2s);
    color: inherit;
    position: absolute;
    width: 20%;
    top: calc(50% - 70px);
    margin: 0 40%;
    &:before {
      content: 'insert_drive_file';
      font-family: 'Material Icons';
      font-size: 50px;
      position: absolute;
      top: 0;
      width: 100%;
      text-align: center;
    }
  }
  .drop-uploading {
    position: absolute;
    width: 20%;
    top: calc(50% - 70px);
    margin: 0 46%;
  }
  .drop-text {
    @include  transition(color ease-in-out .2s);
    color: inherit;
    position: absolute;
    width: 70%;
    top: 50%;
    margin: 0 15%;
    &.csv:before {
      content: 'Drop your CSV file here, or click to browse';
      text-align: center;
      position: absolute;
      width: 100%;
      text-align: center;
    }
    &.csv.uploading {
      @extend .blue-text, .lighten-1;
    }
    &.csv.uploading:before {
      content: 'Uploading...';
    }
    &.audio:before {
      content: 'Drop your MP3 or WAV file here, or click to browse';
      text-align: center;
      position: absolute;
      width: 100%;
      text-align: center;
    }
  }
  &.active {
    @extend .blue-text, .lighten-1;
    border-color: color("blue", "lighten-1");
    .drop-text:before {
      content: 'Drop your file to start uploading';
    }
  }
  &.rejectedfile {
    @extend .red-text;
    border-color: color("red", "lighten-1");
    .drop-icon:before {
      content: 'block';
    }
    .drop-text:before {
      content: 'Invalid file type';
    }
  }
  &.audio {
    height: 80px;
    .drop-icon {
      top: 10px;
      &:before {
        font-size: 30px;
      }
    }
    .drop-text {
      font-size: 90%;
      width: 90%;
      margin: 0 5%;
    }
    &.error {
      .drop-text {
        color: #ff5722;
      }
    }
  }
}

.invalidValue {
  color: red;
  text-decoration: line-through;
}

.select-wrapper {
  .caret {
    @extend .transparent-text;
    font-family: Arial, Helvetica, 'san-serif';
    position: relative;
    width: 25px;
    &:after {
      content: 'arrow_drop_down';
      font-family: 'Material Icons';
      @extend .grey-text;
      font-size: 20px;
      line-height: .4;
      position: absolute;
      top: 0;
      right: 0;
    }
  }

  .dropdown-content {
    li {
      span {
        @extend .black-text;
      }
    }
  }
}

.range-fields {
  .input-field.inline {
    min-width: 145px;
  }
}

.character-counter {
  @extend .grey-text, .lighten-2;
}

.input-field.inline {
  min-width: 250px;
}

.ac-item { // autocomplete dropdown li
  padding: 10px;
}

